add information on the top page

--- a/templates/top.html
+++ b/templates/top.html
@@ -12,11 +12,40 @@
 
 {% block styles %}
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="//jqueryui.com/resources/demos/style.css">
 {% endblock %}
 
 {% block content %}
-How we'll maximize ad revenue with RedisGears, RedisBloom
+<div class="container-fluid">
+	<h2>Adgears</h2>
+	<br><p>This application is built to demonstrate how to:</p>
+	<ul>
+		<li>Minimize latency for serving real time ads</li>
+		<li>Maximizing the revenue generated per impression</li>
+		<li>Illustrate the ability to de-duplicate impressions</li>
+		<li>Show how to use event based statistics in time series</li>
+	</ul>
+
+	<p>Utilizing:</p>
+	<ul>
+		<li><a href="https://redisgears.io">RedisGears</a> for customization and optimization</li>
+		<li><a href="https://redisbloom.io">RedisBloom</a> for de-duplication</li>
+		<li><a href="https://redistimeseries.io">RedisTimeseries</a> for event statistics</li>
+		<li><a href="https://redis.io/topics/streams-intro">Redis Streams</a> for event queuing</li>
+		<li><a href="https://palletsprojects.com/p/flask/">Python Flask</a> to serve the Web UI</li>
+		<li><a href="https://www.chartjs.org/">Chart.js</a> to display data</li>
+	</ul>
+
+	<p>Goals:</p>
+	<ul>
+		<li>Simple, easy to understand code</li>
+		<li>Detail key points in serving and customizing ads</li>
+	</ul>
+
+	<p>Usage:</p>
+	<p>Start on the "Get Ads" tab</p>
+
+
+
+</div>
 {% endblock %}
  
